--- a/.yml
+++ b/.yml
@@ -1,2 +1,18 @@
-- name: generate-snake-game-from-github-contribution-grid
-  uses: Platane/snk@v3.2.0
+- uses: Platane/snk@v3
+  with:
+    # github user name to read the contribution graph from (**required**)
+    # using action context var `github.repository_owner` or specified user
+    github_user_name: ${{ github.gidsola }}
+
+    # list of files to generate.
+    # one file per line. Each output can be customized with options as query string.
+    #
+    #  supported options:
+    #  - palette:     A preset of color, one of [github, github-dark, github-light]
+    #  - color_snake: Color of the snake
+    #  - color_dots:  Coma separated list of dots color.
+    #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
+    #                 Exactly 5 colors are expected.
+    outputs: |
+      dist/gidsola-contribution.svg
+      dist/gidsola-contribution-dark.svg?palette=github-dark
