--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Gen Image
 on:
   # run automatically every 24 hours
   schedule:
-    - cron: "0 */24 * * *" 
+    - cron: "1 */24 * * *" 
   
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
@@ -30,6 +30,6 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/gidsola-contribution.svg
-            dist/gidsola-contribution-dark.svg?palette=github-dark
+            gidsola-contribution.svg
+            gidsola-contribution-dark.svg?palette=github-dark
           
