--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            gidsola-contribution.svg
+            gidsola-contribution-new.svg
             gidsola-contribution-dark.svg?palette=github-dark
           
