--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,9 @@ jobs:
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: |
-            gidsola-contribution-new.svg
-            gidsola-contribution-dark.svg?palette=github-dark
-          
+          svg_out_path: gidsola-contribution-new.svg
+      - name: generate github-contribution-grid-snake-dark.svg
+        uses: Platane/snk/svg-only@v3
+        with:
+          github_user_name: ${{ github.repository_owner }}
+          svg_out_path: gidsola-contribution-dark.svg?palette=github-dark
