--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,9 @@ jobs:
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          svg_out_path: gidsola-contribution-new.svg
+          outputs: gidsola-contribution-new.svg
       - name: generate github-contribution-grid-snake-dark.svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          svg_out_path: gidsola-contribution-dark.svg?palette=github-dark
+          outputs: gidsola-contribution-dark.svg?palette=github-dark
